--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         </ul>
     </nav>
 
+    <div> <br> </div>
+    <img src="neuro.jpg" width="100%" height="600">
+
     <main>
         <section id="overview">
             <h2>Обзор</h2>
@@ -36,6 +39,14 @@
             <p>Китайские нейросети применяются в различных областях, таких как распознавание речи, компьютерное зрение, медицина, транспорт и финансы.</p>
         </section>
 
+        <section id="list">
+            <h2>Впереди всех</h2>
+            <p>Вот некоторые разработки ведущих китайских компаний</p>
+            <p> <a href="https://chat.deepseek.com/">Нейронная сеть от DeepSeek</a> </p>
+            <p> <a href="https://www.hailuo.ai/">Нейронная сеть от MiniMax</a> </p>
+            <p> <a href="https://chat.qwenlm.ai/">Нейронная сеть от Alibaba</a> </p>
+        </section>
+
         <section id="future">
             <h2>Будущее</h2>
             <p>Китай продолжает инвестировать в развитие технологий ИИ и нейросетей, что обещает еще больше инноваций в ближайшем будущем.</p>
@@ -43,7 +54,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Все права защищены. Создано с ❤️ для демонстрации.</p>
+        <p>&copy; 2025 Все права защищены. Создано с ❤️ для демонстрации.</p>
     </footer>
 </body>
 </html>
